fix(api): get namespace response doesn't have createdBy
