# server/types/api/v1alpha/mgmt/namespace.go
@@ -22,6 +22,7 @@ type NamespaceResponse struct {
 	Purpose     string     `json:"purpose"`
 	IsPublic    bool       `json:"is_public"`
 	State       string     `json:"state"`
+	CreatedBy   string     `json:"created_by"`
 	CreatedAt   time.Time  `json:"created_at"`
 	UpdatedAt   *time.Time `json:"updated_at"`
 }
